--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
     <link rel="stylesheet" href="./css/main.min.css" />
   </head>
   <body>
-    <!-- Шапка страницы -->
+    <!-- Шапка страницы-->
     <header class="page-header">
       <div class="container page-header__container">
         <a href="./index.html" class="page-header__logo logo">
@@ -61,8 +61,9 @@
         </h1>
         <button type="button" class="hero__button" data-modal-open>Заказать услугу</button>
       </section>
+
       <!-- Характеристика -->
-      <section class="features section">
+      <section class="features">
         <div class="container">
           <h2 hidden>Характеристика</h2>
           <ul class="features__container">
@@ -113,8 +114,8 @@
           </ul>
         </div>
       </section>
-      <!-- Чем мы занимаемся -->
-      <section class="works section">
+      <!-- Чем мы занимаемся  -->
+      <section class="works">
         <div class="container">
           <h2 class="works__title">Чем мы занимаемся</h2>
           <ul class="works__container">
@@ -133,6 +134,7 @@
           </ul>
         </div>
       </section>
+
       <!-- Наша команда -->
       <section class="team section">
         <div class="container">
@@ -143,6 +145,7 @@
               <div class="team__descr">
                 <h3 class="team__name">Игорь Демьяненко</h3>
                 <p lang="en">Product Designer</p>
+                -->
                 <!--social networks-->
                 <ul class="social-networks team__social-networks">
                   <li class="social-networks__list">
@@ -290,9 +293,10 @@
           </ul>
         </div>
       </section>
-      <!-- Clients -->
-      <section class="section">
-        <div class="clients container">
+
+      <!-- Clients-->
+      <section class="clients">
+        <div class="container">
           <h2 class="clients__title">Постоянные клиенты</h2>
           <ul class="clients__list">
             <li class="clients__item">
@@ -341,6 +345,7 @@
         </div>
       </section>
     </main>
+
     <!-- Футер -->
 
     <footer class="page-footer">
@@ -431,6 +436,7 @@
         </div>
       </div>
     </footer>
+
     <!-- Backdrop -->
     <div class="backdrop is-hidden" data-modal>
       <div class="modal">
