--- a/index.html
+++ b/index.html
@@ -51,6 +51,18 @@
           </a>
         </div>
       </div>
+      <!--<Бургер меню>-->
+      <div class="mobile-header container">
+        <a href="./index.html" class="mobile-header__logo logo">
+          <span class="logo__part">Web</span>Studio</a
+        >
+        <button class="mobile-header__button" type="button" data-menu-button>
+          <svg class="mobile-header__icon" width="24" height="16">
+            <use class="mobile-header__burger" href="./images/symbol-defs.svg#burger-menu"></use>
+            <use class="mobile-header__close" href="./images/symbol-defs.svg#menu-close"></use>
+          </svg>
+        </button>
+      </div>
     </header>
     <main>
       <!-- Герой -->
@@ -437,6 +449,26 @@
       </div>
     </footer>
 
+    <!--Мобильное меню-->
+    <div class="mobile-menu" data-menu>
+      <ul class="mobile-menu__nav list">
+        <li class="mobile-menu__nav__item"><a href="Студия"></a></li>
+        <li class="mobile-menu__nav__item"><a href="Портфолио"></a></li>
+        <li class="mobile-menu__nav__item"><a href="Контакты"></a></li>
+      </ul>
+
+      <ul class="mobile-menu__contacts list">
+        <li class="mobile-menu__contacts__item"><a href="tel:+380961111111"></a></li>
+        <li class="mobile-menu__contacts__item"><a href="mailto:info@devstudio.com"></a></li>
+
+        <ul class="list mobile-menu__socials">
+          <li class="mobile-menu__socials__item"><a href="Instagram"></a></li>
+          <li class="mobile-menu__socials__item"><a href="Twitter"></a></li>
+          <li class="mobile-menu__socials__item"><a href="Facebook"></a></li>
+          <li class="mobile-menu__socials__item"><a href="LinkedIn"></a></li>
+        </ul>
+      </ul>
+    </div>
     <!-- Backdrop -->
     <div class="backdrop is-hidden" data-modal>
       <div class="modal">
@@ -493,5 +525,5 @@
       </div>
     </div>
     <script src="./js/modal.js"></script>
-  </body>
+    <script src="./js/menu.js"></script>
 </html>
