--- a/index.html
+++ b/index.html
@@ -51,11 +51,10 @@
           </a>
         </div>
       </div>
-      <!--<Бургер меню>-->
+      <!--Бургер меню-->
       <div class="mobile-header container">
         <a href="./index.html" class="mobile-header__logo logo">
-          <span class="logo__part">Web</span>Studio</a
-        >
+          <span class="logo__part">Web</span>Studio</a>
         <button class="mobile-header__button" type="button" data-menu-button>
           <svg class="mobile-header__icon" width="24" height="16">
             <use class="mobile-header__burger" href="./images/symbol-defs.svg#burger-menu"></use>
@@ -63,6 +62,25 @@
           </svg>
         </button>
       </div>
+      <!--Mobile menu-->
+    <div class="mobile-menu" data-menu>
+      <ul class="mobile-menu__nav list">
+        <li class="mobile-menu__nav__item"><a class="" href="Студия"></a></li>
+        <li class="mobile-menu__nav__item"><a href="Портфолио"></a></li>
+        <li class="mobile-menu__nav__item"><a href="Контакты"></a></li>
+      </ul>
+
+      <ul class="mobile-menu__contacts list">
+        <li class="mobile-menu__contacts__item"><a class="accent" href="380961111111"></a></li>
+        <li class="mobile-menu__contacts__item"><a href="info@devstudio.com"></a></li>
+</ul>
+        <ul class="list mobile-menu__socials">
+          <li class="mobile-menu__socials__item"><a class="mobile-menu__socials__link" href="Instagram"></a></li>
+          <li class="mobile-menu__socials__item"><a class="mobile-menu__socials__link" href="Twitter"></a></li>
+          <li class="mobile-menu__socials__item"><a class="mobile-menu__socials__link" href="Facebook"></a></li>
+          <li class="mobile-menu__socials__item"><a class="mobile-menu__socials__link" href="LinkedIn"></a></li>
+        </ul>
+    </div>
     </header>
     <main>
       <!-- Герой -->
@@ -305,7 +323,6 @@
           </ul>
         </div>
       </section>
-
       <!-- Clients-->
       <section class="clients">
         <div class="container">
@@ -357,9 +374,7 @@
         </div>
       </section>
     </main>
-
     <!-- Футер -->
-
     <footer class="page-footer">
       <div class="container page-footer__container">
         <div class="page-footer__box">
@@ -448,27 +463,6 @@
         </div>
       </div>
     </footer>
-
-    <!--Мобильное меню-->
-    <div class="mobile-menu" data-menu>
-      <ul class="mobile-menu__nav list">
-        <li class="mobile-menu__nav__item"><a href="Студия"></a></li>
-        <li class="mobile-menu__nav__item"><a href="Портфолио"></a></li>
-        <li class="mobile-menu__nav__item"><a href="Контакты"></a></li>
-      </ul>
-
-      <ul class="mobile-menu__contacts list">
-        <li class="mobile-menu__contacts__item"><a href="tel:+380961111111"></a></li>
-        <li class="mobile-menu__contacts__item"><a href="mailto:info@devstudio.com"></a></li>
-
-        <ul class="list mobile-menu__socials">
-          <li class="mobile-menu__socials__item"><a href="Instagram"></a></li>
-          <li class="mobile-menu__socials__item"><a href="Twitter"></a></li>
-          <li class="mobile-menu__socials__item"><a href="Facebook"></a></li>
-          <li class="mobile-menu__socials__item"><a href="LinkedIn"></a></li>
-        </ul>
-      </ul>
-    </div>
     <!-- Backdrop -->
     <div class="backdrop is-hidden" data-modal>
       <div class="modal">
