--- a/index.html
+++ b/index.html
@@ -54,11 +54,10 @@
       <!--Mobile menu-->
       <div class="mobile-menu" data-menu>
         <ul class="mobile-menu__nav list">
-          <li class="mobile-menu__nav__item"><a class="" href="Студия"></a></li>
+          <li class="mobile-menu__nav__item"><a href="Студия"></a></li>
           <li class="mobile-menu__nav__item"><a href="Портфолио"></a></li>
           <li class="mobile-menu__nav__item"><a href="Контакты"></a></li>
         </ul>
-
         <ul class="mobile-menu__contacts list">
           <li class="mobile-menu__contacts__item"><a class="accent" href="380961111111"></a></li>
           <li class="mobile-menu__contacts__item"><a href="info@devstudio.com"></a></li>
@@ -327,7 +326,7 @@
                 <!-- mobile screen -->
                 <source
                   media="(max-width: 767px)"
-                  srcset="./images/team/img2_sm.webp 2x, ./images/team/img2_sm@2x.webp 2x"
+                  srcset="./images/team/img2_sm.webp 1x, ./images/team/img2_sm@2x.webp 2x"
                   type="image/webp"
                 />
                 <source
@@ -407,7 +406,7 @@
                 <!-- mobile screen -->
                 <source
                   media="(max-width: 767px)"
-                  srcset="./images/team/img3_sm.webp 2x, ./images/team/img3_sm@2x.webp 2x"
+                  srcset="./images/team/img3_sm.webp 1x, ./images/team/img3_sm@2x.webp 2x"
                   type="image/webp"
                 />
                 <source
@@ -487,7 +486,7 @@
                 <!-- mobile screen -->
                 <source
                   media="(max-width: 767px)"
-                  srcset="./images/team/img4_sm.webp 2x, ./images/team/img4_sm@2x.webp 2x"
+                  srcset="./images/team/img4_sm.webp 1x, ./images/team/img4_sm@2x.webp 2x"
                   type="image/webp"
                 />
                 <source
