--- a/index.html
+++ b/index.html
@@ -51,34 +51,8 @@
           </a>
         </div>
       </div>
-      <!--Mobile menu-->
-      <div class="mobile-menu" data-menu>
-        <ul class="mobile-menu__nav list">
-          <li class="mobile-menu__nav__item"><a href="Студия"></a></li>
-          <li class="mobile-menu__nav__item"><a href="Портфолио"></a></li>
-          <li class="mobile-menu__nav__item"><a href="Контакты"></a></li>
-        </ul>
-        <ul class="mobile-menu__contacts list">
-          <li class="mobile-menu__contacts__item"><a class="accent" href="380961111111"></a></li>
-          <li class="mobile-menu__contacts__item"><a href="info@devstudio.com"></a></li>
-        </ul>
-        <ul class="list mobile-menu__socials">
-          <li class="mobile-menu__socials__item">
-            <a class="mobile-menu__socials__link" href="Instagram"></a>
-          </li>
-          <li class="mobile-menu__socials__item">
-            <a class="mobile-menu__socials__link" href="Twitter"></a>
-          </li>
-          <li class="mobile-menu__socials__item">
-            <a class="mobile-menu__socials__link" href="Facebook"></a>
-          </li>
-          <li class="mobile-menu__socials__item">
-            <a class="mobile-menu__socials__link" href="LinkedIn"></a>
-          </li>
-        </ul>
-      </div>
       <!--Бургер меню-->
-      <div class="mobile-header container">
+      <div class="mobile-header">
         <a href="./index.html" class="mobile-header__logo logo">
           <span class="logo__part">Web</span>Studio</a
         >
@@ -88,6 +62,38 @@
             <use class="mobile-header__close" href="./images/symbol-defs.svg#menu-close"></use>
           </svg>
         </button>
+        <!--Mobile menu-->
+        <div class="mobile-menu" data-menu>
+          <ul class="mobile-menu__nav list">
+            <li class="mobile-menu__nav__item mobile-menu__nav__item--current">
+              <a href="Студия"></a>Студия
+            </li>
+            <li class="mobile-menu__nav__item"><a href="Портфолио"></a>Портфолио</li>
+            <li class="mobile-menu__nav__item"><a href="Контакты"></a>Контакты</li>
+          </ul>
+          <ul class="mobile-menu__contacts list">
+            <li class="mobile-menu__contacts__item mobile-menu__contacts__item--accent">
+              <a class="" href="tel:+380961111111"></a>+380961111111
+            </li>
+            <li class="mobile-menu__contacts__item">
+              <a href="mailto:info@devstudio.com"></a>info@devstudio.com
+            </li>
+          </ul>
+          <ul class="list mobile-menu__socials">
+            <li class="mobile-menu__socials__item">
+              <a class="mobile-menu__socials__link" href="Instagram">Instagram</a>
+            </li>
+            <li class="mobile-menu__socials__item">
+              <a class="mobile-menu__socials__link" href="Twitter">Twitter</a>
+            </li>
+            <li class="mobile-menu__socials__item">
+              <a class="mobile-menu__socials__link" href="Facebook">Facebook</a>
+            </li>
+            <li class="mobile-menu__socials__item">
+              <a class="mobile-menu__socials__link" href="LinkedIn">LinkedIn</a>
+            </li>
+          </ul>
+        </div>
       </div>
     </header>
     <main>
